vertical align fix

--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@
 
 #pp-logo {
   display: inline-block;
-  vertical-align: 0px;
-  margin-bottom: 10px; }
+  vertical-align: baseline; }
 
 .home {
   display: inline-block;
