--- a/styles/home/_nav.scss
+++ b/styles/home/_nav.scss
@@ -12,8 +12,8 @@
 
 #pp-logo{
 	display: inline-block;
-	vertical-align: 0px;
-	margin-bottom: 10px;
+	vertical-align:baseline;
+	//margin-bottom: 10px;
 }
 
 $move-left-nav-icons:20px;
